felix_ontanon/session01/exercise02/mariadb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mariadb
  namespace: exercise-02
  labels:
    app: wpblog
    tier: database
spec:
  selector:
    matchLabels:
      tier: database
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        app: wpblog
        tier: database
    spec:
      containers:
      - name: mariadb
        image: bitnami/mariadb:latest
        ports:
        - containerPort: 3306
          name: mysql
        env: # Vars from https://hub.docker.com/r/bitnami/mariadb
        - name: ALLOW_EMPTY_PASSWORD
          value: "yes"
        - name: MARIADB_DATABASE
          valueFrom:
            configMapKeyRef:
              name: blogconfig
              key: db-blog-name
        - name: MARIADB_USER
          valueFrom:
            configMapKeyRef:
              name: blogconfig
              key: db-blog-user
        - name: MARIADB_PASSWORD 
          valueFrom:
            secretKeyRef:
              name: blogsecrets
              key: db-blog-password

      # Liveness & Readiness Probes
      - name: goproxy
        image: k8s.gcr.io/goproxy:0.1
        ports:
        - containerPort: 3306
        readinessProbe:
          tcpSocket:
            port: 3306
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 3306
          initialDelaySeconds: 15
          periodSeconds: 20
