felix_ontanon/session01/exercise02/wordpress-canary-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress-canary
  namespace: exercise-02
  labels:
    app: wpblog
    tier: blog
    track: canary
spec:
  selector:
    matchLabels:
      tier: blog
      track: canary
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        app: wpblog
        tier: blog
        track: canary
    spec:
      containers:
      - name: wordpress
        image: bitnami/wordpress:4.9.5
        ports:
        - containerPort: 80
          name: http
        env: # Vars from https://github.com/bitnami/bitnami-docker-wordpress#configuration
        - name: MARIADB_HOST
          value: mariadb.exercise-02 # Internal Endpoint automatically generated by mariadb service
        - name: WORDPRESS_DATABASE_NAME
          valueFrom:
            configMapKeyRef:
              name: blogconfig
              key: db-blog-name
        - name: WORDPRESS_DATABASE_USER
          valueFrom:
            configMapKeyRef:
              name: blogconfig
              key: db-blog-user
        - name: WORDPRESS_DATABASE_PASSWORD
          valueFrom:
            secretKeyRef:
              name: blogsecrets
              key: db-blog-password
        - name: WORDPRESS_BLOG_NAME
          valueFrom:
            configMapKeyRef:
              name: blogconfig
              key: wp-blog-name
        - name: WORDPRESS_USERNAME
          valueFrom:
            configMapKeyRef:
              name: blogconfig
              key: wp-blog-user
        - name: WORDPRESS_PASSWORD
          valueFrom:
            secretKeyRef:
              name: blogsecrets
              key: wp-blog-password
        - name: WORDPRESS_EMAIL
          valueFrom:
            configMapKeyRef:
              name: blogconfig
              key: wp-blog-email
        - name: WORDPRESS_FIRST_NAME
          valueFrom:
            configMapKeyRef:
              name: blogconfig
              key: wp-blog-firstname
        - name: WORDPRESS_LAST_NAME
          valueFrom:
            configMapKeyRef:
              name: blogconfig
              key: wp-blog-lastname
      - name: liveness
        image: k8s.gcr.io/liveness
        args:
        - /server
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
