felix_ontanon/session01/exercise02/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  namespace: exercise-02
  labels:
    app: wpblog
  annotations:
    # From https://github.com/kubernetes/ingress-nginx/tree/master/docs/examples/affinity/cookie
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-name: wordpress-exercise-02
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
spec:
  rules:
  - host: wordpress-exercise-02.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 80
